--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 		<![endif]-->
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
 <link rel="stylesheet" href="styles.275d09fe75d82b338464.css"></head>
 
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.50080cb4907bc77b3cc8.js"></script><script type="text/javascript" src="main.4f7691a5b41aa7ccc012.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.50080cb4907bc77b3cc8.js"></script><script type="text/javascript" src="main.a608845e23267698a3b6.js"></script></body>
 
 </html>
